# tacy-and-terry-destroy-the-world

./: .gitignore  Cargo.toml  README.md  destiny-char.rs  main.rs  pythonversion.py  test_jsons.rs  web.rs  web2.rs
inventory/src/: characterResponce.txt  main.rs  sample_character_data.txt
src/: .lib.rs.swp  .main.rs.swp  lib.rs  main.rs
